Kompilator2024/gen/l4Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Rafa³/Sem5/Jftt/Kompilator/Kompilator2024/Kompilator2024/l4.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class l4Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, WS=20, WHITESPACE=21, PIDENTIFIER=22, PROCEDURE=23, 
		IS=24, BEGIN=25, END=26, PROGRAM=27, IF=28, WHILE=29, FOR=30, REPEAT=31, 
		THEN=32, ELSE=33, ENDIF=34, DO=35, ENDWHILE=36, UNTIL=37, FROM=38, ENDFOR=39, 
		TO=40, DOWNTO=41, READ=42, WRITE=43, T=44, NUM=45;
	public const int
		RULE_program_all = 0, RULE_procedures = 1, RULE_main = 2, RULE_commands = 3, 
		RULE_command = 4, RULE_expression = 5, RULE_proc_head = 6, RULE_proc_call = 7, 
		RULE_declarations = 8, RULE_args_decl = 9, RULE_args = 10, RULE_condition = 11, 
		RULE_value = 12, RULE_identifier = 13;
	public static readonly string[] ruleNames = {
		"program_all", "procedures", "main", "commands", "command", "expression", 
		"proc_head", "proc_call", "declarations", "args_decl", "args", "condition", 
		"value", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "':='", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", 
		"','", "'['", "':'", "']'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", 
		null, null, null, "'PROCEDURE'", "'IS'", "'BEGIN'", "'END'", "'PROGRAM'", 
		"'IF'", "'WHILE'", "'FOR'", "'REPEAT'", "'THEN'", "'ELSE'", "'ENDIF'", 
		"'DO'", "'ENDWHILE'", "'UNTIL'", "'FROM'", "'ENDFOR'", "'TO'", "'DOWNTO'", 
		"'READ'", "'WRITE'", "'T'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "WS", "WHITESPACE", "PIDENTIFIER", 
		"PROCEDURE", "IS", "BEGIN", "END", "PROGRAM", "IF", "WHILE", "FOR", "REPEAT", 
		"THEN", "ELSE", "ENDIF", "DO", "ENDWHILE", "UNTIL", "FROM", "ENDFOR", 
		"TO", "DOWNTO", "READ", "WRITE", "T", "NUM"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "l4.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static l4Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public l4Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public l4Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Program_allContext : ParserRuleContext {
		public Program_allContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program_all; } }
	 
		public Program_allContext() { }
		public virtual void CopyFrom(Program_allContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WithProceduresContext : Program_allContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProceduresContext procedures() {
			return GetRuleContext<ProceduresContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MainContext main() {
			return GetRuleContext<MainContext>(0);
		}
		public WithProceduresContext(Program_allContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterWithProcedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitWithProcedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWithProcedures(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NoPreoceduresContext : Program_allContext {
		[System.Diagnostics.DebuggerNonUserCode] public MainContext main() {
			return GetRuleContext<MainContext>(0);
		}
		public NoPreoceduresContext(Program_allContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterNoPreocedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitNoPreocedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNoPreocedures(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Program_allContext program_all() {
		Program_allContext _localctx = new Program_allContext(Context, State);
		EnterRule(_localctx, 0, RULE_program_all);
		try {
			State = 32;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PROCEDURE:
				_localctx = new WithProceduresContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 28;
				procedures(0);
				State = 29;
				main();
				}
				break;
			case PROGRAM:
				_localctx = new NoPreoceduresContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 31;
				main();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProceduresContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROCEDURE() { return GetToken(l4Parser.PROCEDURE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Proc_headContext proc_head() {
			return GetRuleContext<Proc_headContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IS() { return GetToken(l4Parser.IS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(l4Parser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(l4Parser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProceduresContext procedures() {
			return GetRuleContext<ProceduresContext>(0);
		}
		public ProceduresContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedures; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterProcedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitProcedures(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedures(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProceduresContext procedures() {
		return procedures(0);
	}

	private ProceduresContext procedures(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ProceduresContext _localctx = new ProceduresContext(Context, _parentState);
		ProceduresContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_procedures, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 35;
				Match(PROCEDURE);
				State = 36;
				proc_head();
				State = 37;
				Match(IS);
				State = 38;
				declarations(0);
				State = 39;
				Match(BEGIN);
				State = 40;
				commands(0);
				State = 41;
				Match(END);
				}
				break;
			case 2:
				{
				State = 43;
				Match(PROCEDURE);
				State = 44;
				proc_head();
				State = 45;
				Match(IS);
				State = 46;
				Match(BEGIN);
				State = 47;
				commands(0);
				State = 48;
				Match(END);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 71;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 69;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new ProceduresContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_procedures);
						State = 52;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 53;
						Match(PROCEDURE);
						State = 54;
						proc_head();
						State = 55;
						Match(IS);
						State = 56;
						declarations(0);
						State = 57;
						Match(BEGIN);
						State = 58;
						commands(0);
						State = 59;
						Match(END);
						}
						break;
					case 2:
						{
						_localctx = new ProceduresContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_procedures);
						State = 61;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 62;
						Match(PROCEDURE);
						State = 63;
						proc_head();
						State = 64;
						Match(IS);
						State = 65;
						Match(BEGIN);
						State = 66;
						commands(0);
						State = 67;
						Match(END);
						}
						break;
					}
					} 
				}
				State = 73;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class MainContext : ParserRuleContext {
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
	 
		public MainContext() { }
		public virtual void CopyFrom(MainContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NoDeclareContext : MainContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROGRAM() { return GetToken(l4Parser.PROGRAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IS() { return GetToken(l4Parser.IS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(l4Parser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(l4Parser.END, 0); }
		public NoDeclareContext(MainContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterNoDeclare(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitNoDeclare(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNoDeclare(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclareContext : MainContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROGRAM() { return GetToken(l4Parser.PROGRAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IS() { return GetToken(l4Parser.IS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(l4Parser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(l4Parser.END, 0); }
		public DeclareContext(MainContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterDeclare(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitDeclare(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclare(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 4, RULE_main);
		try {
			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new DeclareContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				Match(PROGRAM);
				State = 75;
				Match(IS);
				State = 76;
				declarations(0);
				State = 77;
				Match(BEGIN);
				State = 78;
				commands(0);
				State = 79;
				Match(END);
				}
				break;
			case 2:
				_localctx = new NoDeclareContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 81;
				Match(PROGRAM);
				State = 82;
				Match(IS);
				State = 83;
				Match(BEGIN);
				State = 84;
				commands(0);
				State = 85;
				Match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commands; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterCommands(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitCommands(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommands(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandsContext commands() {
		return commands(0);
	}

	private CommandsContext commands(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		CommandsContext _localctx = new CommandsContext(Context, _parentState);
		CommandsContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_commands, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 90;
			command();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 96;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CommandsContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_commands);
					State = 92;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 93;
					command();
					}
					} 
				}
				State = 98;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ReadContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READ() { return GetToken(l4Parser.READ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ReadContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterRead(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitRead(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRead(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WriteContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WRITE() { return GetToken(l4Parser.WRITE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public WriteContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterWrite(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitWrite(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWrite(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CallContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public Proc_callContext proc_call() {
			return GetRuleContext<Proc_callContext>(0);
		}
		public CallContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfElseContext : CommandContext {
		public CommandsContext ifblock;
		public CommandsContext elseblock;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(l4Parser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THEN() { return GetToken(l4Parser.THEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(l4Parser.ELSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(l4Parser.ENDIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext[] commands() {
			return GetRuleContexts<CommandsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands(int i) {
			return GetRuleContext<CommandsContext>(i);
		}
		public IfElseContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfElse(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterAssign(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitAssign(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RepeatContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REPEAT() { return GetToken(l4Parser.REPEAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNTIL() { return GetToken(l4Parser.UNTIL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		public RepeatContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.EnterRepeat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Il4Listener typedListener = listener as Il4Listener;
			if (typedListener != null) typedListener.ExitRepeat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Il4Visitor<TResult> typedVisitor = visitor as Il4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForUpContext : CommandContext {
		public ValueContext v1;
		public ValueContext v2;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FOR() { return GetToken(l4Parser.FOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIDENTIFIER() { return GetToken(l4Parser.PIDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(l4Parser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TO() { return GetToken(l4Parser.TO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DO() { return GetToken(l4Parser.DO, 0); }
